--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.4.5",
+    "canvasjs": "^1.8.1",
     "classnames": "^2.2.6",
     "core-js": "^2.6.9",
     "graphql": "^0.8.2",
