--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -5,9 +5,7 @@
   ],
 
   "defaultData": [
-    { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
-    { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
-    { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
-    { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+    { "user": "john", "savings": 300, "owner": "john@foo.com" },
+    { "user": "mike", "savings": 500, "owner": "mike@foo.com" }
   ]
 }
