default profile data

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -5,7 +5,7 @@
   ],
 
   "defaultData": [
-    { "user": "john", "savings": 300, "owner": "john@foo.com" },
-    { "user": "mike", "savings": 500, "owner": "mike@foo.com" }
+    { "user": "admin", "savings": 0, "goal": 2000, "expenses": 0, "owner": "admin@foo.com" },
+    { "user": "john", "savings": 0, "goal": 1000, "expenses": 0, "owner": "john@foo.com" }
   ]
 }
